--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/vite": "^4.1.8",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/three": "^0.179.0",
     "@vitejs/plugin-react": "^4.2.1",
     "tailwindcss": "^4.1.8",
     "typescript": "^5.8.3"
