--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "@types/react-dom": "^18.2.17",
     "@types/three": "^0.179.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "graphql": "^16.11.0",
     "tailwindcss": "^4.1.8",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vite": "^7.1.1"
   },
   "dependencies": {
+    "@react-three/drei": "^9.114.3",
+    "@react-three/fiber": "^8.17.10",
     "@shopify/shop-minis-react": "0.0.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
