--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "A Shop Mini with WebView and Vite",
   "main": "index.tsx",
   "scripts": {
-    "start": "shop-minis dev"
+    "start": "npx @shopify/shop-minis-cli dev"
   },
   "devDependencies": {
     "@shopify/shop-minis-cli": "0.0.175",
@@ -20,11 +20,11 @@
     "vite": "^7.1.1"
   },
   "dependencies": {
-    "@react-three/drei": "^9.114.3",
     "@react-three/fiber": "^8.17.10",
     "@shopify/shop-minis-react": "0.0.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "suppress-experimental-warnings": "^2.0.0",
     "three": "0.178.0"
   }
 }
