--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "start": "npx @shopify/shop-minis-cli dev"
   },
   "devDependencies": {
-    "@shopify/shop-minis-cli": "^0.0.178",
+    "@shopify/shop-minis-cli": "0.0.183",
     "@tailwindcss/vite": "^4.1.8",
-    "@types/react": "^19.1.11",
-    "@types/react-dom": "^19.1.7",
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1",
     "@types/three": "^0.179.0",
     "@vitejs/plugin-react": "^4.2.1",
     "graphql": "^16.11.0",
@@ -20,10 +20,10 @@
     "vite": "^7.1.1"
   },
   "dependencies": {
-    "@react-three/fiber": "9.2.0",
+    "@react-three/fiber": "8.17.10",
     "@shopify/shop-minis-react": "0.0.34",
-    "react": "19.1.1",
-    "react-dom": "19.1.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "suppress-experimental-warnings": "^2.0.0",
     "three": "0.178.0"
   }
