Restore manifest.json with CSP configuration for CDN access
- Network and external_resource_access permissions
- CloudFront domain in external_domains
- Comprehensive CSP rules for fonts, connections, images, and media
- This should fix the CDN functionality issues

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,20 @@
 {
   "name": "keyboard-builder",
-  "permissions": [],
+  "permissions": [
+    "network",
+    "external_resource_access"
+  ],
+  "external_domains": [
+    "https://d3beh29tnzl3zq.cloudfront.net",
+    "https://api.openai.com",
+    "https://httpbin.org"
+  ],
+  "csp": {
+    "font-src": "'self' data: blob:",
+    "connect-src": "'self' https://d3beh29tnzl3zq.cloudfront.net https://api.openai.com https://httpbin.org https:",
+    "img-src": "'self' data: blob: https:",
+    "media-src": "'self' data: blob: https:"
+  },
   "privacy_policy_url": "https://example.com/privacy",
   "terms_url": "https://example.com/terms",
   "handle": "keyboard-builder-xhzk"
